<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_home"
        android:checkable="true"
        android:icon="@drawable/ic_action_home"
        android:title="@string/menu_home" />
    <item
        android:id="@+id/menu_discount"
        android:checkable="true"
        android:icon="@drawable/ic_action_discount"
        android:title="@string/menu_discount" />

    <item
        android:id="@+id/menu_cart"
        android:checkable="true"
        android:icon="@drawable/ic_menu_cart_ico"
        android:title="@string/menu_cart" />
    <item
        android:id="@+id/menu_search"
        android:checkable="true"
        android:icon="@drawable/ic_action_search"
        android:title="@string/menu_search" />
    <item
        android:id="@+id/menu_profile"
        android:checkable="true"
        android:icon="@drawable/ic_action_profile"
        android:title="@string/menu_profile" />
</menu>